--- a/src/patternfly/components/Radio/radio.scss
+++ b/src/patternfly/components/Radio/radio.scss
@@ -8,7 +8,7 @@
   --#{$radio}__label--FontSize: var(--#{$pf-global}--FontSize--md);
   --#{$radio}__label--LineHeight: var(--#{$pf-global}--LineHeight--sm);
   --#{$radio}__input--Height: var(--#{$radio}__label--FontSize);
-  --#{$radio}__input--MarginTop: calc(((var(--#{$radio}__label--FontSize) * var(--#{$radio}__label--LineHeight)) - var(--#{$radio}__input--Height)) / 2);
+  --#{$radio}__input--TranslateY: calc(((var(--#{$radio}__label--FontSize) * var(--#{$radio}__label--LineHeight)) - var(--#{$radio}__input--Height)) / 2);
   --#{$radio}__input--first-child--MarginLeft: #{pf-size-prem(1px)};
   --#{$radio}__input--last-child--MarginRight: #{pf-size-prem(1px)};
   --#{$radio}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
@@ -22,7 +22,7 @@
   &.pf-m-standalone {
     --#{$radio}--GridGap: 0;
     --#{$radio}__input--Height: auto;
-    --#{$radio}__input--MarginTop: 0;
+    --#{$radio}__input--TranslateY: 0;
 
     display: inline-grid;
     line-height: 1;
@@ -38,7 +38,7 @@
 
 .#{$radio}__input {
   height: var(--#{$radio}__input--Height);
-  margin-top: var(--#{$radio}__input--MarginTop);
+  transform: translate(var(--#{$radio}__input--TranslateY));
 
   // fixes a chrome issue where the left edge is cut off in a container with overflow hidden
   &:first-child {
